[gd_scene load_steps=6 format=3 uid="uid://cu440emlhve1m"]

[ext_resource type="Script" path="res://FPSController/PlayerScript.gd" id="1_t58vj"]
[ext_resource type="PackedScene" uid="uid://de8sgghqvldw3" path="res://InventorySystem/InventoryPanel.tscn" id="4_xovxo"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.371158
height = 2.64793

[sub_resource type="Animation" id="Animation_i7x7w"]
resource_name = "Walk"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"FootstepAnimate"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uiy40"]
_data = {
"Walk": SubResource("Animation_i7x7w")
}

[node name="Player" type="CharacterBody3D" groups=["Players"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_t58vj")
sprint_enabled = true
enable_inventory = true

[node name="Commands" type="Node" parent="."]

[node name="PlayerModel" type="Node3D" parent="."]

[node name="PlayerHead" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.968611, -0.292869)

[node name="PlayerRecoil" type="Node3D" parent="PlayerHead"]

[node name="PlayerCamera" type="Camera3D" parent="PlayerHead/PlayerRecoil"]
cull_mask = 524287

[node name="RayCast3D" type="RayCast3D" parent="PlayerHead/PlayerRecoil"]
target_position = Vector3(0, 0, -3)
collision_mask = 13

[node name="PlayerHand" type="Marker3D" parent="PlayerHead/PlayerRecoil"]

[node name="ItemSpawn" type="Marker3D" parent="PlayerHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.197413, -0.0797351)

[node name="CollisionBodyCapsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0386829, 0)
shape = SubResource("1")

[node name="WalkSounds" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.951681, 0)
max_distance = 12.0

[node name="InteractSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.783644, 0)
max_distance = 2.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uiy40")
}

[node name="InventoryUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Inventory" parent="InventoryUI" instance=ExtResource("4_xovxo")]
layout_mode = 1
